--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
     </style>
 </head>
 <body>
-    
+    <header class="grid grid-cols-1 md:grid-cols-2 w-full bg-blue-700 text-center text-white text-2xl">
+        <nav class="leading-[64px]" >Welcome to Shop</nav>
+        <nav id="shopping-cart-btn" class="leading-[64px] cursor-pointer flex items-center justify-center" >  <span class="material-symbols-outlined text-3xl mr-2 ">shopping_cart</span> shopping cart  </nav>
+    </header>
+    <hr class="border-2 border-blue-950" >
 </body>
 </html>
