create shopping carts

--- a/index.html
+++ b/index.html
@@ -41,5 +41,14 @@
         <nav id="shopping-cart-btn" class="leading-[64px] cursor-pointer flex items-center justify-center" >  <span class="material-symbols-outlined text-3xl mr-2 ">shopping_cart</span> shopping cart  </nav>
     </header>
     <hr class="border-2 border-blue-950" >
+
+    <div id="shopping-cart" class="h-0 w-full md:w-[75%] bg-blue-200 overflow-hidden fixed top-[132px] md:top-[68px] md:left-[12.5%] rounded-xl overflow-y-auto flex flex-col ">
+        <button id="close-cart" class="px-2 py-1 text-white bg-red-500 font-bold absolute top-1 left-1 rounded-lg text-lg " >X</button>
+        <h2 class="text-center text-2xl my-4">shopping cart</h2>
+        <div id="cartItems"></div>
+        <div class="text-center text-xl text-center" id="emptyMessage">shopping cart is empty</div>
+        <div class="text-center text-xl text-center mb-4 " id="totalPrice">Total Price:$0</div>
+        <button id="clear-cart-btn" class="bg-red-500 text-white text-xl rounded-lg px-2 py-1 mx-auto mb-6" >Clear Cart Items</button>
+    </div>
 </body>
 </html>
