create products container

--- a/index.html
+++ b/index.html
@@ -50,5 +50,9 @@
         <div class="text-center text-xl text-center mb-4 " id="totalPrice">Total Price:$0</div>
         <button id="clear-cart-btn" class="bg-red-500 text-white text-xl rounded-lg px-2 py-1 mx-auto mb-6" >Clear Cart Items</button>
     </div>
+
+    <div id="product-container" class=" grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-7 p-9" >
+
+    </div>
 </body>
 </html>
