create and link js file

--- a/index.html
+++ b/index.html
@@ -54,5 +54,7 @@
     <div id="product-container" class=" grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-7 p-9" >
 
     </div>
+
+    <script src="./js/store.js" ></script>
 </body>
 </html>
